<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTestingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testing_text"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/languageRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <RadioButton android:id="@+id/radio_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/english"
                android:textSize="16sp"
                android:padding="15dp"
                />
            <RadioButton android:id="@+id/radio_urdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/urdu"
                android:textSize="16sp"
                android:padding="15dp"
                />

            <RadioButton android:id="@+id/radio_hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/hindi"
                android:textSize="16sp"
                android:padding="15dp"
                />

            <RadioButton android:id="@+id/radio_bangla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/bangla"
                android:textSize="16sp"
                android:padding="15dp"
                />

            <RadioButton android:id="@+id/radio_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/arabic"
                android:textSize="16sp"
                android:padding="15dp"
                />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
